# clara

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/clara/: __init__.py  agent.py  health.py  logging.py
backend/clara/tools/: __init__.py  call.py  restaurant.py
backend/tests/: __init__.py  test_restaurant.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/: instrumentation.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/token/: route.ts
frontend/src/components/: Controls.tsx  Orb.tsx  Transcript.tsx
infra/: main.tf
scripts/: deploy.sh  setup-secrets.sh
